# django_url

./: README.md  pyproject.toml
app/: tests.py  urls.py  views.py
core/: settings.py  urls.py
src/django_url/: __init__.py
