[project]
name = "django-url"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "Django>=5.0.3",
    "pytest>=8.0.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_url"]
